# sharkpy

./: .gitignore  README.md  cmake_setup.py  pybind_setup.py  pyproject.toml  requirements.txt  setup.py
cpp/: CMakeLists.txt  IRModule.h  PybindUtils.h  getenv.hpp  libs.txt  sharkpy.cpp  sharkpy_ext.cpp
demo/: demo.py
python/: __init__.py
